changed update request to use a specific dto instead
